fix tree render issue on Safari and Konqueror: CLK-210
git-svn-id: https://svn.apache.org/repos/asf/incubator/click/trunk/click@716116 13f79535-47bb-0310-9956-ffa450edef68

--- a/extras/src/net/sf/click/extras/tree/tree.css
+++ b/extras/src/net/sf/click/extras/tree/tree.css
@@ -35,6 +35,7 @@
    padding-left: 10px;
    line-height: 1.5em;
 }
+
 .treestyle span.leaf {
    background-image: url(images/tjunction.png);
    background-repeat: no-repeat;
@@ -75,16 +76,18 @@
     padding-left: 1.1em;
 }
 .treestyle .spacer {
-   padding-left: 15px;
+    float: left;
+    min-height: 18px;
+    padding-left: 18px;
 }
 .treestyle .selected a,
 .treestyle .selected {
     background-color: #0A246A;
     color: white;
-    border:1px solid #000000;
+    border: 1px solid #000000;
 }
-.treestyle .unselected {   
-    
+.treestyle .unselected {
+
 }
  
 /*needed for client side */
@@ -92,4 +95,18 @@
    display : none;
 }
 .treestyle .show { 
+}
+
+.treestyle span.leaf,
+.treestyle span.expanded,
+.treestyle span.collapsed,
+.treestyle span.leafLastNode,
+.treestyle span.expandedLastNode,
+.treestyle span.collapsedLastNode,
+.treestyle span.leafIcon,
+.treestyle span.expandedIcon,
+.treestyle span.collapsedIcon,
+.treestyle .spacer {
+    clear: both;
+    _float: none; /*IE only*/
 }
